--- a/src/app/doctornavbar/doctornavbar.component.html
+++ b/src/app/doctornavbar/doctornavbar.component.html
@@ -1,9 +1,9 @@
 <nav class="flex justify-between items-center h-16 bg-white shadow-lg  px-4">
     <div class="flex items-center">
-      <span class="text-xl font-bold mr-2">Hello, Tiny Modiba</span>
+      <span class="text-xl font-bold mr-2">Hello, Dr Tiny Modiba</span>
     </div>
     <ul class="flex space-x-4 font-bold">
-        <li><a href="" [routerLink]="['/patienthome']" class="hover:text-gray-400">HOME</a></li>
+        <li><a href="" [routerLink]="['/viewPatient']" class="hover:text-gray-400">HOME</a></li>
       <li><a href="#" class="hover:text-gray-400">LOGOUT</a></li>
     </ul>
   </nav>
