--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,21 +1,5 @@
 <div>
-<div class="px-4 flex py-2 border-1 bg-white shadow">
-    
-    <div class="w-12 h-12 ">
-        <img src="../../assets/logo-removebg-preview.png" alt="">
-    </div>
-    
-    
-        <ul class="flex space-x-24 font-bold py-2 ml-[900px]">
-            <li>
-                <a href="">HOME</a>
-            </li>
-            <li>
-                <a href="">LOGIN</a>
-            </li>
-        </ul>
-    
-</div>
+<app-navbarhome></app-navbarhome>
 
 
 <div class="h-[350px] p-2 w-full bg-cover" style="background-image: url(../../assets/doctor.jpg);">
