--- a/src/app/viewappointments/viewappointments.component.html
+++ b/src/app/viewappointments/viewappointments.component.html
@@ -1,10 +1,10 @@
 <app-navbarpatient></app-navbarpatient>
 
 
-<div class="container mx-auto  px-2 w-1/2 h-[500px] shadow-lg">
-<h1 class="font-bold text-center py-12">Scheduled Appointments</h1>
+<div class="container mx-auto  px-2 w-1/2 h-[500px] shadow-lg mt-24">
 
-<h2 class="text-xl font-bold mb-4">Scheduled Appointments</h2>
+
+<h2 class="text-xl font-bold mb-4 text-center py-12">Scheduled Appointments</h2>
 <table class="w-full border border-gray-300 table-auto">
   <thead>
     <tr>
@@ -23,5 +23,5 @@
 </table>
 
 
-<button class="text-white font-bold bg-blue-500 rounded-md w-[80px] h-[30px] ">DONE</button>
+
 </div>
