--- a/src/app/bookpatient/bookpatient.component.html
+++ b/src/app/bookpatient/bookpatient.component.html
@@ -1,19 +1,4 @@
-<div>
-    <div class="px-4 flex py-2 border-1 bg-white shadow">
-        
-        <div class="w-12 h-12 ">
-            <img src="../../assets/logo-removebg-preview.png" alt="">
-        </div>
-        
-        
-            <ul class="flex space-x-24 font-bold py-2 ml-[900px]">
-                <li><a href=""[routerLink]="['/bookdoctor']">HOME</a></li>
-                <li><a href=""[routerLink]="['/register']">REGISTER</a></li>
-                <li><a href=""[routerLink]="['/users']">USERS</a></li>
-                <li><a href="">LOGOUT</a></li>
-            </ul>
-        
-    </div>
+<app-doctornavbar></app-doctornavbar>
 
 <div class="flex">
     <div class="container mx-auto mt-12 w-full max-w-md bg-white rounded-lg shadow-md p-8">
@@ -36,22 +21,3 @@
           <button type="submit" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Book Appointment</button>
         </form>
       </div>
-      
-
-      <div class="w-full lg:w-1/2 px-4 py-8 mt-12  mr-12 bg-white rounded-lg shadow-md overflow-y-auto">
-        <h2 class="text-xl font-bold mb-4">Your Appointments</h2>
-        <table class="w-full table-auto">
-          <thead>
-            <tr class="text-xs font-medium text-gray-500 bg-gray-200">
-              <th class="px-4 py-2">Name</th>
-              <th class="px-4 py-2">Date & Time</th>
-            </tr>
-          </thead>
-          <tbody class="text-gray-700">
-            </tbody>
-        </table>
-      </div>
-    </div>
-
-</div>
-
