--- a/src/app/doctorviewpatients/doctorviewpatients.component.html
+++ b/src/app/doctorviewpatients/doctorviewpatients.component.html
@@ -15,7 +15,8 @@
       </thead>
       <tbody>
         <tr>
-          <td class="px-4 py-2 border border-gray-300">Patience Makwarela </td>
+            
+          <td class="px-4 py-2 border border-gray-300"><a href=""[routerLink]="['/doctordescription']">Patience Makwarela</a> </td>
           <!-- <td class="px-4 py-2 border border-gray-300">10/02/2024</td> -->
           <td class="px-4 py-2 border border-gray-300">10:45</td>
         </tr>
