--- a/src/app/register-patient/register-patient.component.html
+++ b/src/app/register-patient/register-patient.component.html
@@ -1,3 +1,20 @@
+<div class="px-4 flex py-2 border-1 bg-white shadow">
+        
+    <div class="w-12 h-12 ">
+        <img src="../../assets/logo-removebg-preview.png" alt="">
+    </div>
+    
+    
+        <ul class="flex space-x-24 font-bold py-2 ml-[900px]">
+            <li><a href=""[routerLink]="['/bookdoctor']">HOME</a></li>
+            <li><a href=""[routerLink]="['/register']">REGISTER</a></li>
+            <li><a href=""[routerLink]="['/users']">USERS</a></li>
+            <li><a href="">LOGOUT</a></li>
+        </ul>
+    
+</div>
+
+
 <div class="w-1/2 bg-cover px-2 ml-[450px] mt-12 font-[Poppins]" style="background-image: url('../../assets/hospitall.jpg');">
     <div class="container mx-auto px-24 py-8 shadow-lg ">
       <h1 class="text-3xl font-bold mb-6 text-center">Register</h1>
