--- a/src/app/navbarhome/navbarhome.component.html
+++ b/src/app/navbarhome/navbarhome.component.html
@@ -9,6 +9,7 @@
             <li>
                 <a href="">HOME</a>
             </li>
+            <li><a href=""[routerLink]="['/register']">REGISTER</a></li>
             <li>
                 <a href=""[routerLink]="['/login']">LOGIN</a>
             </li>
