--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -4,7 +4,7 @@
 
 <div class="w-1/2 bg-cover px-2 ml-[450px] mt-12 font-[Poppins]" style="background-image: url('../../assets/hospitall.jpg');">
     <div class="container mx-auto px-24 py-8 shadow-lg ">
-      <h1 class="text-3xl font-bold mb-6 text-center">Register</h1>
+      <h1 class="text-3xl font-bold mb-6 text-center">Login</h1>
       <form class="space-y-4 font-bold">
    
         <div class="flex flex-col">
